--- a/probs/0009.tex
+++ b/probs/0009.tex
@@ -24,33 +24,34 @@
 如图~\ref{fig:0009-BD}，延长$CD$到$B'$，使得$B'D = BD$。连接$AB'$。
 
 \begin{align*}
-  &\because   \angle ADB = 90^\circ - \frac12\angle BDC \\
-  &\therefore 2\angle ADB + \angle BDC = 180^\circ \\
-  &\because   \angle ADB + \angle ADB' + \angle BDC = 180^\circ \\
-  &\therefore \angle ADB = \angle ADB' \\
-  &\because   \text{在}\triangle ADB\text{与}\triangle ADB'\text{中} \\
-  &\mathalignsep \begin{cases}
+  \because  {}& \angle ADB = 90^\circ - \frac12\angle BDC \\
+  \therefore{}& 2\angle ADB + \angle BDC = 180^\circ \\
+  \because  {}& \angle ADB + \angle ADB' + \angle BDC = 180^\circ \\
+  \therefore{}& \angle ADB = \angle ADB' \\
+  \because  {}& \text{在 $\triangle ADB$ 与 $\triangle CDB'$ 中} \\
+  & \begin{cases}
     AD = AD \\
     \angle ADB = \angle ADB' \\
-    DB = DB' \\
+    DB = DB'
   \end{cases} \\
-  &\therefore \triangle ADB \cong \triangle ADB' \\
-  &\therefore AB = AB', \angle ABD = \angle AB'D \\
-  &\because   \angle ABD = 60^\circ \\
-  &\therefore \angle AB'D = 60^\circ \\
-  &\because   AB = AC \\
-  &\therefore AB' = AC \\
-  &\because   \text{在}\triangle AB'C\text{中} \\
-  &\mathalignsep \begin{cases}
+  \therefore{}& \triangle ADB \cong \triangle ADB' \\
+  \therefore{}& AB = AB', \angle ABD = \angle AB'D \\
+  \because  {}& \angle ABD = 60^\circ \\
+  \therefore{}& \angle AB'D = 60^\circ \\
+  \because  {}& AB = AC \\
+  \therefore{}& AB' = AC \\
+  \because  {}& \text{在 $\triangle AB'C$ 中} \\
+  & \begin{cases}
     \angle AB'C = 60^\circ \\
-    AB' = AC \\
+    AB' = AC
   \end{cases} \\
-  &\therefore \triangle AB'C\text{是等边三角形} \\
-  &\therefore AC = B'C \\
-  &\because   B'C = B'D + CD \\
-  &\therefore AC = BD + CD \\
-  &\text{证毕。} \\
+  \therefore{}& \text{$\triangle AB'C$ 是等边三角形} \\
+  \therefore{}& AC = B'C \\
+  \because  {}& B'C = B'D + CD \\
+  \therefore{}& AC = BD + CD
 \end{align*}
+
+证毕。
 
 \subsection{翻折$CD$边} \label{subsec:0009-CD}
 
@@ -68,28 +69,29 @@
 如图~\ref{fig:0009-CD}，延长$BD$到$C'$，使得$C'D = CD$。连接$AC'$。
 
 \begin{align*}
-  &\because   \angle ADB = 90^\circ - \frac12\angle BDC \\
-  &\therefore 2\angle ADB + \angle BDC = 180^\circ \\
-  &\because   \angle ADB + \angle ADC' = 180^\circ \\
-  &\therefore \angle ADC' = \angle ADB + \angle BDC = \angle ADC \\
-  &\because   \text{在}\triangle ADC\text{与}\triangle ADC'\text{中} \\
-  &\mathalignsep \begin{cases}
+  \because  {}& \angle ADB = 90^\circ - \frac12\angle BDC \\
+  \therefore{}& 2\angle ADB + \angle BDC = 180^\circ \\
+  \because  {}& \angle ADB + \angle ADC' = 180^\circ \\
+  \therefore{}& \angle ADC' = \angle ADB + \angle BDC = \angle ADC \\
+  \because  {}& \text{在 $\triangle ADC$ 与 $\triangle ADC'$ 中} \\
+  & \begin{cases}
     AD = AD \\
     \angle ADC = \angle ADC' \\
-    DC = DC' \\
+    DC = DC'
   \end{cases} \\
-  &\therefore \triangle ADC \cong \triangle ADC' \\
-  &\therefore AC = AC' \\
-  &\because   AB = AC \\
-  &\therefore AB = AC' \\
-  &\because   \text{在}\triangle ABC'\text{中} \\
-  &\mathalignsep \begin{cases}
+  \therefore{}& \triangle ADC \cong \triangle ADC' \\
+  \therefore{}& AC = AC' \\
+  \because  {}& AB = AC \\
+  \therefore{}& AB = AC' \\
+  \because  {}& \text{在}\triangle ABC'\text{中} \\
+  & \begin{cases}
     \angle ABC' = 60^\circ \\
-    AB = AC' \\
+    AB = AC'
   \end{cases} \\
-  &\therefore \triangle ABC'\text{是等边三角形} \\
-  &\therefore BC' = AB = AC \\
-  &\because   BC' = BD + C'D \\
-  &\therefore AC = BD + CD \\
-  &\text{证毕。} \\
+  \therefore{}& \text{$\triangle ABC'$ 是等边三角形} \\
+  \therefore{}& BC' = AB = AC \\
+  \because  {}& BC' = BD + C'D \\
+  \therefore{}& AC = BD + CD
 \end{align*}
+
+证毕。
