--- a/probs/000F.tex
+++ b/probs/000F.tex
@@ -13,7 +13,7 @@
 求$rm + sn$与其对偶式$sm - rn$的平方和，可得
 
 \begin{align*}
-  &\phantom{=} (rm + sn)^2 + (sm - rn)^2 \\
+  &\mathrel{\phantom=} (rm + sn)^2 + (sm - rn)^2 \\
   &= r^2m^2 + 2rsmn + s^2n^2 + s^2m^2 - 2rsmn + r^2n^2 \\
   &= (r^2 + s^2)(m^2 + n^2) \\
   &= p(r^2 + s^2) \\
