--- a/probs/0011.tex
+++ b/probs/0011.tex
@@ -30,7 +30,7 @@
 又因为$P$在多边形内，且该多边形是凸的，所以可知多边形的面积为$S_1 + S_2 + \dots + S_n$。由于$P$在同一多边形内移动，所以多边形的边长$k$和多边形的面积是一个固定值，即
 
 \begin{align*}
-  &\phantom{=} S_1 + S_2 + \dots + S_n \\
+  &\mathrel{\phantom=} S_1 + S_2 + \dots + S_n \\
   &= \frac12kh_1 + \frac12kh_2 + \dots + \frac12kh_n \\
   &= \frac12k(h_1 + h_2 + \dots + h_n) \\
 \end{align*}
