--- a/probs/0014.tex
+++ b/probs/0014.tex
@@ -13,7 +13,7 @@
 依题意可得
 
 \begin{align*}
-  &\mathrel{\phantom{=}} \frac{x^2}{x + 1} + \frac{y^2}{y + 1} \\
+  &\mathrel{\phantom=} \frac{x^2}{x + 1} + \frac{y^2}{y + 1} \\
   &= \frac{x^2(y + 1) + y^2(x + 1)}{(x + 1)(y + 1)} \\
   &= \frac{x^2y + xy^2 + x^2 + y^2}{xy + x + y + 1} \\
   &= \frac{xy(x + y) + x^2 + y^2}{xy + 2} \\
@@ -27,10 +27,7 @@
 
 根据二元一次方程组
 
-\[ \begin{cases}
-  x + y = 1 \\
-  xy = k \\
-\end{cases} \]
+\[ \begin{cases} x + y = 1 \\ xy = k \end{cases} \]
 
 可得$x - y = \pm\sqrt{1 - 4k}$。由于$x - y$是实数，所以$1 - 4k \le 0$，即$k \ge \sfrac14$。\footnote{这一步可以理解为平面直角坐标系里有两个函数：$x + y = 1$和$xy = k$，我们要使$k$尽可能的大同时保证这两个函数有交点，此时$k = \sfrac14$。} 因此，$xy$的最大值为$\sfrac14$。代入原式可得其最小值为
 
