--- a/probs/0026.tex
+++ b/probs/0026.tex
@@ -19,23 +19,21 @@
   \label{fig:0026-eqtri}
 \end{figure}
 
-基本思路：寻找等腰三角形，利用圆周角定理计算角度，得出结论。
-
-如图~\ref{fig:0026-eqtri}，连接$OB$、$OC$。
+如图~\ref{fig:0026-eqtri}，连接$OB, OC$。
 
 \begin{align*}
-  &\because   OC\text{是圆}O\text{的半径}, \\
-  &\mathalignsep P_1P_2\text{是圆}O\text{过点}C\text{的切线} \\
-  &\therefore OC \perp P_1P_2 \\
-  &\therefore \angle OCP_1 = 90^\circ \\
-  &\therefore \angle OCB + \angle BCP_1 = 90^\circ \\
-  &\because   OB = OC \\
-  &\therefore \angle OCB = \angle OBC \\
-  &\because   \angle OCB + \angle OBC + \angle BOC = 180^\circ \\
-  &\therefore \angle OCB = 90^\circ - \frac12\angle BOC \\
-  &\because   \text{据圆周角定理\footnotemark 得，}\angle BOC = 2\angle BAC \\
-  &\therefore \angle OCB = 90^\circ - \angle BAC \\
-  &\therefore \angle BCP_1 = \angle BAC \\
+  \because  {}& OC\text{$OC$ 是 $\odot O$ 的半径}, \\
+  & \text{$P_1P_2$ 是 $\odot O$ 过点 $C$ 的切线} \\
+  \therefore{}& OC \perp P_1P_2 \\
+  \therefore{}& \angle OCP_1 = 90^\circ \\
+  \therefore{}& \angle OCB + \angle BCP_1 = 90^\circ \\
+  \because  {}& OB = OC \\
+  \therefore{}& \angle OCB = \angle OBC \\
+  \because  {}& \angle OCB + \angle OBC + \angle BOC = 180^\circ \\
+  \therefore{}& \angle OCB = 90^\circ - \frac12\angle BOC \\
+  \because  {}& \text{据圆周角定理\footnotemark 得，$\angle BOC = 2\angle BAC$} \\
+  \therefore{}& \angle OCB = 90^\circ - \angle BAC \\
+  \therefore{}& \angle BCP_1 = \angle BAC \\
 \end{align*}
 
 \footnotetext{圆周角定理的证明参见第~\ref{sec:0025} 题。}
