--- a/probs/0027.tex
+++ b/probs/0027.tex
@@ -19,15 +19,13 @@
   \label{fig:0027-sim}
 \end{figure}
 
-基本思路：利用弦切角定理找出相似三角形，得出比例。
-
-如图~\ref{fig:0027-sim}，连接$AC$、$BC$。
+如图~\ref{fig:0027-sim}，连接$AC, BC$。
 
 \begin{align*}
-  &\because   \text{据弦切角定理\footnotemark 得，}\angle CAP = \angle BCP \\
-  &\mathalignsep \angle P = \angle P \\
-  &\therefore \triangle CAP \sim \triangle BCP \\
-  &\therefore AP:CP = CP:BP \\
+  \because  {}& \text{据弦切角定理\footnotemark 得，$\angle CAP = \angle BCP$}, \\
+  & \angle P = \angle P \\
+  \therefore{}& \triangle CAP \sim \triangle BCP \\
+  \therefore{}& AP:CP = CP:BP \\
 \end{align*}
 
 \footnotetext{弦切角定理的证明参见第~\ref{sec:0026} 题。}
