--- a/probs/0038.tex
+++ b/probs/0038.tex
@@ -17,7 +17,7 @@
 首先我们可知：
 
 \begin{align*}
-  &\phantom{=} 2(1^k + 2^k + \dots + n^k) \\
+  &\mathrel{\phantom=} 2(1^k + 2^k + \dots + n^k) \\
   &= (1^k + 2^k + \dots + (n - 1)^k + n^k) \\
   &+ (n^k + (n - 1)^k + \dots + 2^k + 1^k) \\
   &= (1^k + n^k) + (2^k + (n - 1)^k) + \dots + (n^k + 1^k) \\
@@ -29,7 +29,7 @@
 又因为
 
 \begin{align*}
-  &\phantom{=} 2(1^k + 2^k + \dots + n^k) \\
+  &\mathrel{\phantom=} 2(1^k + 2^k + \dots + n^k) \\
   &= 2(0^k + 1^k + 2^k + \dots + n^k) \\
   &= (0^k + 1^k + \dots + (n - 1)^k + n^k) \\
   &+ (n^k + (n - 1)^k + \dots + 1^k + 0^k) \\
