--- a/probs/0049.tex
+++ b/probs/0049.tex
@@ -30,46 +30,46 @@
 如图~\ref{fig:0049-eqtri}，延长射线$BC$，将$\triangle BAD$旋转至$\triangle B'AD'$处，使得$D'$在$BC$上，连接$B'C$，作$B'P \perp BC$于$P$，$AQ \perp BC$于$Q$。由旋转的性质易知$\triangle BAD \cong \triangle B'AD'$。
 
 \begin{align*}
-  &\because   \triangle BAD \cong \triangle B'AD' \\
-  &\therefore BD = B'D', AB = AB', AD = AD', \\
-  &\phantom{\because} \angle ADB = \angle AD'B', \angle BAD = \angle B'AD' \\
-  &\therefore \angle ADD' = \angle AD'D \\
-  &\because   \angle ADD' = 30^\circ \\
-  &\therefore \angle AD'D = 30^\circ, \angle ADB = 150^\circ \\
-  &\therefore \angle DAD' = 120^\circ, \angle AD'B' = 150^\circ \\
-  &\therefore \angle B'AD = 120^\circ - \angle B'AD' \\
-  &\because   \angle BAC = 60^\circ \\
-  &\therefore \angle CAD = 60^\circ - \angle BAD = 60^\circ - \angle B'AD' \\
-  &\therefore \angle B'AC = \angle B'AD - \angle CAD = 60^\circ \\
-  &\therefore \angle BAC = \angle B'AC \\
-  &\because   \text{在}\triangle BAC\text{与}\triangle B'AC\text{中} \\
-  &\mathalignsep \begin{cases}
+  \because  {}& \triangle BAD \cong \triangle B'AD' \\
+  \therefore{}& BD = B'D', AB = AB', AD = AD', \\
+  & \angle ADB = \angle AD'B', \angle BAD = \angle B'AD' \\
+  \therefore{}& \angle ADD' = \angle AD'D \\
+  \because  {}& \angle ADD' = 30^\circ \\
+  \therefore{}& \angle AD'D = 30^\circ, \angle ADB = 150^\circ \\
+  \therefore{}& \angle DAD' = 120^\circ, \angle AD'B' = 150^\circ \\
+  \therefore{}& \angle B'AD = 120^\circ - \angle B'AD' \\
+  \because  {}& \angle BAC = 60^\circ \\
+  \therefore{}& \angle CAD = 60^\circ - \angle BAD = 60^\circ - \angle B'AD' \\
+  \therefore{}& \angle B'AC = \angle B'AD - \angle CAD = 60^\circ \\
+  \therefore{}& \angle BAC = \angle B'AC \\
+  \because  {}& \text{在 $\triangle BAC$ 与 $\triangle B'AC$ 中} \\
+  & \begin{cases}
     AB = AB' \\
     \angle BAC = \angle B'AC \\
-    AC = AC \\
+    AC = AC
   \end{cases} \\
-  &\therefore \triangle BAC \cong \triangle B'AC \\
-  &\therefore BC = B'C \\
-  &\because   BC = \sqrt7 \\
-  &\therefore B'C = \sqrt7 \\
-  \text{又}&\because \angle AD'B' = 150^\circ, \angle AD'C = 30^\circ \\
-  &\therefore \angle CD'B' = 120^\circ \\
-  &\therefore \angle B'D'P = 60^\circ \\
-  &\because   B'P \perp BC \\
-  &\therefore \angle P = 90^\circ \\
-  &\therefore PD' = \frac12B'D', PB' = \frac{\sqrt3}2B'D', \\
-  &\phantom{\because} PB'^2 + PC^2 = B'C^2 \\
-  &\because   BD = 1 \\
-  &\therefore B'D' = 1, PD' = \frac12, PB' = \frac{\sqrt3}2 \\
-  &\therefore PC = \sqrt{(\sqrt7)^2 - \left(\frac{\sqrt3}2\right)^2} = \frac52 \\
-  &\therefore CD' = PC - PD' = 2 \\
-  &\because   CD = BC - BD = \sqrt7 - 1 \\
-  &\therefore DD' = 1 + \sqrt7 \\
-  \text{又}&\because \triangle DAD'\text{是等腰三角形且}AQ \perp DD' \\
-  &\therefore DQ = \frac12DD' = \frac12(1 + \sqrt7) \\
-  &\because   \angle ADC = 30^\circ \\
-  &\therefore AD = \frac2{\sqrt3}DQ \\
-  &\therefore AD = \frac{\sqrt3}3(1 + \sqrt7) = \frac13(\sqrt3 + \sqrt{21}) \\
+  \therefore{}& \triangle BAC \cong \triangle B'AC \\
+  \therefore{}& BC = B'C \\
+  \because  {}& BC = \sqrt7 \\
+  \therefore{}& B'C = \sqrt7 \\
+  \text{又}\because{}& \angle AD'B' = 150^\circ, \angle AD'C = 30^\circ \\
+  \therefore{}& \angle CD'B' = 120^\circ \\
+  \therefore{}& \angle B'D'P = 60^\circ \\
+  \because  {}& B'P \perp BC \\
+  \therefore{}& \angle P = 90^\circ \\
+  \therefore{}& PD' = \frac12B'D', PB' = \frac{\sqrt3}2B'D', \\
+  & PB'^2 + PC^2 = B'C^2 \\
+  \because  {}& BD = 1 \\
+  \therefore{}& B'D' = 1, PD' = \frac12, PB' = \frac{\sqrt3}2 \\
+  \therefore{}& PC = \sqrt{(\sqrt7)^2 - \left(\frac{\sqrt3}2\right)^2} = \frac52 \\
+  \therefore{}& CD' = PC - PD' = 2 \\
+  \because  {}& CD = BC - BD = \sqrt7 - 1 \\
+  \therefore{}& DD' = 1 + \sqrt7 \\
+  \text{又}\because{}& \triangle DAD'\text{是等腰三角形且}AQ \perp DD' \\
+  \therefore{}& DQ = \frac12DD' = \frac12(1 + \sqrt7) \\
+  \because  {}& \angle ADC = 30^\circ \\
+  \therefore{}& AD = \frac2{\sqrt3}DQ \\
+  \therefore{}& AD = \frac{\sqrt3}3(1 + \sqrt7) = \frac13(\sqrt3 + \sqrt{21}) \\
 \end{align*}
 
 综上，$AD$的长为$\sfrac13(\sqrt3 + \sqrt{21})$。\footnotemark
@@ -89,7 +89,7 @@
 
 由$\angle ADC = 30^\circ$易知，$A$在直线$y = \sfrac{\sqrt3}3x$上，不妨设$A(\sqrt3x, x)$。设直线$AB$的斜率为$k_1$，直线$AC$的斜率为$k_2$，$\alpha = \angle ABC$，$\beta$为如图所示$\angle ACB$的补角。
 
-由于$A(\sqrt3x, x)$、$B(-1, 0)$、$C(\sqrt7 - 1, 0)$，根据斜率公式知
+由于$A(\sqrt3x, x), B(-1, 0), C(\sqrt7 - 1, 0)$，根据斜率公式知
 
 \begin{align*}
   \tan\alpha = k_1 &= \frac{x - 0}{\sqrt3x - (-1)} \\
