--- a/0000-003F.tex
+++ b/0000-003F.tex
@@ -2,7 +2,7 @@
 \documentclass[twoside, twocolumn]{ctexart}
 \input{preamble}
 \setcounter{section}{0}
-
+\includeonly{probs/0022,probs/002E}
 \title{\textbf{Liu One的数学题集}（\textit{VOL. 1}\quad 0000 -- 003F）}
 \author{Copyright \copyright\ 2024 \textbf{Liu One}
   \quad \emph{All rights reserved.} \\
